arch-final-project/final-project-chart/templates/oauth-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
    spec:
      containers:
      - args:
        - --provider=oidc
        - --email-domain=*
        - --upstream=file:///dev/null
        - --http-address=0.0.0.0:4180
        - --cookie-name=s
        - --pass-authorization-header=true
        - --pass-access-token=true
        - --set-xauthrequest=true
        - --oidc-issuer-url=http://final-project-keyclo/auth/realms/myrealm
        - --ssl-insecure-skip-verify=true
        - --insecure-oidc-skip-issuer-verification=true
        - --cookie-secure=false
        - --login-url=http://arch.homework/auth/realms/myrealm/protocol/openid-connect/auth
        - --redeem-url=http://final-project-keyclo/auth/realms/myrealm/protocol/openid-connect/token
        image: quay.io/pusher/oauth2_proxy:latest
        imagePullPolicy: Always
        name: oauth2-proxy
        ports:
        - containerPort: 4180
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
spec:
  ports:
  - name: http
    port: 4180
    protocol: TCP
    targetPort: 4180
  selector:
    k8s-app: oauth2-proxy
