arch-final-project/final-project-chart/templates/ingress-auth-protected.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: final-project-ingress-protected
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.final-project.svc.cluster.local:4180/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-Auth-Request-Email,X-Auth-Request-User"
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/romanov($|/)(tours.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: rvm-final-project-tours-service
                port:
                  number: 8080
          - path: /otusapp/romanov($|/)(users.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: rvm-final-project-tours-service
                port:
                  number: 8080
          - path: /otusapp/romanov($|/)(successfulOrders.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: rvm-final-project-tours-service
                port:
                  number: 8080
          - path: /otusapp/romanov($|/)(toursSearchFilter.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: rvm-final-project-tours-service
                port:
                  number: 8080

          - path: /otusapp/romanov($|/)(orders.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: rvm-final-project-orders-service
                port:
                  number: 8080

          - path: /otusapp/romanov($|/)(payments.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: final-project-payments-service
                port:
                  number: 8080

          - path: /otusapp/romanov($|/)(flights.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: rvm-final-project-flights-service
                port:
                  number: 8080

          - path: /otusapp/romanov($|/)(hotelsBookings.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: rvm-final-project-hotels-service
                port:
                  number: 8080
