arch-final-project/final-project-chart/templates/keycloak-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keycloak
spec:
  tls:
    - hosts:
        - arch.homework
  rules:
    - host: arch.homework
      http:
        paths:
          - backend:
              serviceName: final-project-keyclo
              servicePort: 80
